DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/Aptitude__c.field-meta.xml
<CustomField>
    <fullName>Aptitude__c</fullName>
    <label>Aptitude</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>