DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/Date_Activated__c.field-meta.xml
<CustomField>
    <fullName>Date_Activated__c</fullName>
    <formula>Sales_Rep__r.DateActivated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Activated</label>
    <type>Date</type>
</CustomField>