DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/Employee_Status__c.field-meta.xml
<CustomField>
    <fullName>Employee_Status__c</fullName>
    <label>Employee Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Performer</fullName>
            </value>
            <value>
                <fullName>New Employee</fullName>
            </value>
            <value>
                <fullName>Being Monitored</fullName>
            </value>
            <value>
                <fullName>To be placed on PIP</fullName>
            </value>
            <value>
                <fullName>On PIP</fullName>
            </value>
            <value>
                <fullName>On Leave</fullName>
            </value>
            <value>
                <fullName>Resigned</fullName>
            </value>
            <value>
                <fullName>To be Exited</fullName>
            </value>
            <value>
                <fullName>Exited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>