DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/Forecast_Type__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Type__c</fullName>
    <label>Forecast Type</label>
    <length>155</length>
    <type>Text</type>
</CustomField>