DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/Fx_Impact__c.field-meta.xml
<CustomField>
    <fullName>Fx_Impact__c</fullName>
    <label>FX Impact (USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>