DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/Incoming__c.field-meta.xml
<CustomField>
    <fullName>Incoming__c</fullName>
    <label>Incoming Carrier Revenue (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>