DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <defaultValue>CASE($User.Digicel_Country__c, 
&quot;Anguilla&quot;, &quot;Anguilla&quot;,
&quot;Antigua and Barbuda&quot;, &quot;Antigua and Barbuda&quot;,
&quot;Aruba&quot;,&quot;Aruba&quot;,
&quot;Barbados&quot;,&quot;Barbados&quot;,
&quot;Bermuda&quot;,&quot;Bermuda&quot;,
&quot;Bonaire&quot;,&quot;Bonaire&quot;,
&quot;BVI&quot;,&quot;BVI&quot;,
&quot;Cayman Islands&quot;,&quot;Cayman Islands&quot;,
&quot;Curacao&quot;,&quot;Curacao&quot;,
&quot;Dominica&quot;,&quot;Dominica&quot;,
&quot;El Salvador&quot;,&quot;El Salvador&quot;,
&quot;FWI&quot;,&quot;FWI&quot;,
&quot;Grenada&quot;,&quot;Grenada&quot;,
&quot;Guyana&quot;,&quot;Guyana&quot;,
&quot;Haiti&quot;,&quot;Haiti&quot;,
&quot;Jamaica&quot;,&quot;Jamaica&quot;,
&quot;Montserrat&quot;,&quot;Montserrat&quot;,
&quot;Panama&quot;,&quot;Panama&quot;,
&quot;Saint Kitts and Nevis&quot;,&quot;Saint Kitts and Nevis&quot;,
&quot;Saint Lucia&quot;,&quot;Saint Lucia&quot;,
&quot;Saint Vincent and the Grenadines&quot;,&quot;Saint Vincent and the Grenadines&quot;,
&quot;Suriname&quot;,&quot;Suriname&quot;,
&quot;Tres&quot;,&quot;Tres&quot;,
&quot;Trinidad and Tobago&quot;,&quot;Trinidad and Tobago&quot;,
&quot;Turks and Caicos Islands&quot;,&quot;Turks and Caicos Islands&quot;,
 &quot;&quot;)</defaultValue>
    <label>Market</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anguilla</fullName>
            </value>
            <value>
                <fullName>Antigua and Barbuda</fullName>
            </value>
            <value>
                <fullName>Aruba</fullName>
            </value>
            <value>
                <fullName>Barbados</fullName>
            </value>
            <value>
                <fullName>Bermuda</fullName>
            </value>
            <value>
                <fullName>Bonaire</fullName>
            </value>
            <value>
                <fullName>BVI</fullName>
            </value>
            <value>
                <fullName>Cayman Islands</fullName>
            </value>
            <value>
                <fullName>Curacao</fullName>
            </value>
            <value>
                <fullName>Dominica</fullName>
            </value>
            <value>
                <fullName>El Salvador</fullName>
            </value>
            <value>
                <fullName>FWI</fullName>
            </value>
            <value>
                <fullName>Grenada</fullName>
            </value>
            <value>
                <fullName>Guyana</fullName>
            </value>
            <value>
                <fullName>Haiti</fullName>
            </value>
            <value>
                <fullName>Jamaica</fullName>
            </value>
            <value>
                <fullName>Montserrat</fullName>
            </value>
            <value>
                <fullName>Panama</fullName>
            </value>
            <value>
                <fullName>Saint Kitts and Nevis</fullName>
            </value>
            <value>
                <fullName>Saint Lucia</fullName>
            </value>
            <value>
                <fullName>Saint Vincent and the Grenadines</fullName>
            </value>
            <value>
                <fullName>Suriname</fullName>
            </value>
            <value>
                <fullName>Tres</fullName>
            </value>
            <value>
                <fullName>Trinidad and Tobago</fullName>
            </value>
            <value>
                <fullName>Turks and Caicos Islands</fullName>
            </value>
            <value>
                <fullName>PNG</fullName>
            </value>
            <value>
                <fullName>Fiji</fullName>
            </value>
            <value>
                <fullName>Nauru</fullName>
            </value>
            <value>
                <fullName>Samoa</fullName>
            </value>
            <value>
                <fullName>Tonga</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>