DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/Market_Revenue_Forecast_Key__c.field-meta.xml
<CustomField>
    <fullName>Market_Revenue_Forecast_Key__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Revenue Forecast Key</label>
    <type>Text</type>
</CustomField>