DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/MRR_Budget__c.field-meta.xml
<CustomField>
    <fullName>MRR_Budget__c</fullName>
    <label>MRR Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>