DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/MRR_HFM_Forecast__c.field-meta.xml
<CustomField>
    <fullName>MRR_HFM_Forecast__c</fullName>
    <label>MRR HFM Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>