DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/MRR_ICT_Target__c.field-meta.xml
<CustomField>
    <fullName>MRR_ICT_Target__c</fullName>
    <label>MRR ICT Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>