DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/OTC_Budget__c.field-meta.xml
<CustomField>
    <fullName>OTC_Budget__c</fullName>
    <label>OTC Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>