DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/OTC_Flash__c.field-meta.xml
<CustomField>
    <fullName>OTC_Flash__c</fullName>
    <label>OTC Flash</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>