DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/OTC_Quota__c.field-meta.xml
<CustomField>
    <fullName>OTC_Quota__c</fullName>
    <label>OTC Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>