DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/OTC_Re_Phased_Budget__c.field-meta.xml
<CustomField>
    <fullName>OTC_Re_Phased_Budget__c</fullName>
    <label>OTC Budget Group Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>