DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/PIP_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PIP_End_Date__c</fullName>
    <label>PIP End Date</label>
    <type>Date</type>
</CustomField>