DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Targets</relationshipLabel>
    <relationshipName>Market_Revenue_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>