DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/Rebates__c.field-meta.xml
<CustomField>
    <fullName>Rebates__c</fullName>
    <label>Rebates (USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>