DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/Record_Type_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Unique_ID__c</fullName>
    <formula>CASESAFEID(RecordTypeId)</formula>
    <label>Record Type Unique ID</label>
    <type>Text</type>
</CustomField>