DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/Roaming__c.field-meta.xml
<CustomField>
    <fullName>Roaming__c</fullName>
    <label>Outbound Roaming Revenue (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>