DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Market_Revenue_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>