DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/This_record_has_been_updated__c.field-meta.xml
<CustomField>
    <fullName>This_record_has_been_updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>This record has been updated</label>
    <type>Checkbox</type>
</CustomField>