DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/Total_Mrr__c.field-meta.xml
<CustomField>
    <fullName>Total_Mrr__c</fullName>
    <label>Total MRR (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>