DigicielFull/force-app/main/default/objects/HFM_Data__c/fields/Trafficout_Of_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Trafficout_Of_Bundle__c</fullName>
    <label>Traffic/OOB Revenue (USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>