DigicielFull/force-app/main/default/objects/HFM_Data__c/recordTypes/actuals.recordType-meta.xml
<RecordType>
    <fullName>actuals</fullName>
    <active>false</active>
    <label>actuals</label>
</RecordType>