DigicielFull/force-app/main/default/objects/HFM_Data__c/recordTypes/budget.recordType-meta.xml
<RecordType>
    <fullName>budget</fullName>
    <active>false</active>
    <label>budget</label>
</RecordType>