DigicielFull/force-app/main/default/objects/HFM_Data__c/recordTypes/historical_forecast.recordType-meta.xml
<RecordType>
    <fullName>historical_forecast</fullName>
    <active>false</active>
    <label>historical_forecast</label>
</RecordType>