DigicielFull/force-app/main/default/objects/HFM_Data__c/recordTypes/Nbr_Budget.recordType-meta.xml
<RecordType>
    <fullName>Nbr_Budget</fullName>
    <active>true</active>
    <label>Nbr Budget</label>
</RecordType>