DigicielFull/force-app/main/default/objects/HFM_Data__c/recordTypes/sales_forecast.recordType-meta.xml
<RecordType>
    <fullName>sales_forecast</fullName>
    <active>true</active>
    <label>sales_forecast</label>
</RecordType>