DigicielFull/force-app/main/default/objects/HFM_Data__c/recordTypes/sales_forecast_week.recordType-meta.xml
<RecordType>
    <fullName>sales_forecast_week</fullName>
    <active>false</active>
    <description>Week on week changes</description>
    <label>sales_forecast_week</label>
</RecordType>