DigicielFull/force-app/main/default/objects/HFM_Data__c/recordTypes/sales_quota.recordType-meta.xml
<RecordType>
    <fullName>sales_quota</fullName>
    <active>false</active>
    <label>sales_quota</label>
</RecordType>