DigicielFull/force-app/main/default/objects/HFM_Data__c/recordTypes/sales_resource_targets.recordType-meta.xml
<RecordType>
    <fullName>sales_resource_targets</fullName>
    <active>true</active>
    <label>sales_resource_targets</label>
</RecordType>