DigicielFull/force-app/main/default/objects/HFM_Data__c/recordTypes/sales_resource_targets_nbr.recordType-meta.xml
<RecordType>
    <fullName>sales_resource_targets_nbr</fullName>
    <active>false</active>
    <label>sales_resource_targets_nbr</label>
</RecordType>