DigicielFull/force-app/main/default/objects/HFM_Data__c/recordTypes/trend_product_targets.recordType-meta.xml
<RecordType>
    <fullName>trend_product_targets</fullName>
    <active>true</active>
    <label>trend_product_targets</label>
</RecordType>