DigicielFull/force-app/main/default/objects/HFM_Data__c/recordTypes/trend_sales_resource_targets.recordType-meta.xml
<RecordType>
    <fullName>trend_sales_resource_targets</fullName>
    <active>true</active>
    <label>trend_sales_resource_targets</label>
</RecordType>