DigicielFull/force-app/main/default/objects/HFM_Data__c/validationRules/Exit_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Exit_Date</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    OR(ISPICKVAL( Employee_Status__c , &apos;Exit&apos;),
       ISPICKVAL( Employee_Status__c , &apos;To be Exited&apos;)
    ),
    ISBLANK( Exit_Date__c )
)</errorConditionFormula>
    <errorDisplayField>Exit_Date__c</errorDisplayField>
    <errorMessage>Please populate Exit Date</errorMessage>
</ValidationRule>