DigicielFull/force-app/main/default/objects/HFM_Data__c/validationRules/PIP_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>PIP_End_Date</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Employee_Status__c , &apos;On PIP&apos;),
    ISBLANK(  PIP_End_Date__c  )
)</errorConditionFormula>
    <errorDisplayField>PIP_End_Date__c</errorDisplayField>
    <errorMessage>Please populate PIP End Date</errorMessage>
</ValidationRule>