DigicielFull/force-app/main/default/objects/HFM_Data__c/validationRules/PIP_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>PIP_Start_Date</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Employee_Status__c , &apos;To be placed on PIP&apos;),
    ISBLANK(   PIP_Start_Date__c   )
)</errorConditionFormula>
    <errorDisplayField>PIP_Start_Date__c</errorDisplayField>
    <errorMessage>Please populate PIP Start Date</errorMessage>
</ValidationRule>