DigicielFull/force-app/main/default/objects/HFM_Data__c/listViews/Sales_Resource_Targets.listView-meta.xml
<ListView>
    <fullName>Sales_Resource_Targets</fullName>
    <columns>NAME</columns>
    <columns>Calendar_Month__c</columns>
    <columns>Month__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Market__c</columns>
    <columns>MRR_GSM_Target__c</columns>
    <columns>MRR_ICT_Target__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>HFM_Data__c.sales_resource_targets</value>
    </filters>
    <filters>
        <field>Market__c</field>
        <operation>notEqual</operation>
        <value>Montserrat,Panama,Tres,PNG,Fiji,Nauru,Samoa,Tonga,Vanuatu</value>
    </filters>
    <filters>
        <field>Month__c</field>
        <operation>greaterThan</operation>
        <value>3/31/2022</value>
    </filters>
    <label>Sales Resource Targets</label>
    <language>en_US</language>
</ListView>