DigicielFull/force-app/main/default/objects/HFM_Data__c/listViews/Trend.listView-meta.xml
<ListView>
    <fullName>Trend</fullName>
    <columns>NAME</columns>
    <columns>Market__c</columns>
    <columns>Month__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Product__c</columns>
    <columns>MRR_ICT_Target__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>HFM_Data__c.trend_sales_resource_targets,HFM_Data__c.trend_product_targets,HFM_Data__c.trend_market_targets</value>
    </filters>
    <label>Trend</label>
</ListView>